# graphmodel

./: Graph model.pptx  discretestate.hpp
ftma/: .clang-format.bc  CMakeLists.txt  Doxyfile  Makefile  TODO.txt  check.sh  cscope.files  cscope.out  depend.mk  emacs  fashHash.cpp  format.sh  ftma_debug  ftma_debugmaster  ftma_release  graph.sh  main.cpp  newresult2.txt  result1.txt  result3.txt  result33.txt  result44.txt  test.gv  uppaalparser.y
ftma/doc/html/: annotated.html  channel_8h.html  channel_8h__dep__incl.map  channel_8h__dep__incl.md5  channel_8h__incl.map  channel_8h__incl.md5  channel_8h_source.html  classes.html  classgraphsat_1_1_clock_constraint-members.html  classgraphsat_1_1_clock_constraint.html  classgraphsat_1_1_clock_constraint_a25326d99afbcc8355cfbc290ba81af8b_cgraph.map  classgraphsat_1_1_clock_constraint_a25326d99afbcc8355cfbc290ba81af8b_cgraph.md5  classgraphsat_1_1_clock_constraint_a5217585f904187d8cf0880e6dd1838b0_icgraph.map  classgraphsat_1_1_clock_constraint_a5217585f904187d8cf0880e6dd1838b0_icgraph.md5  classgraphsat_1_1_clock_constraint_a561831532370518c82b43f6e8a3a5c9e_cgraph.map  classgraphsat_1_1_clock_constraint_a561831532370518c82b43f6e8a3a5c9e_cgraph.md5  classgraphsat_1_1_clock_constraint_a561831532370518c82b43f6e8a3a5c9e_icgraph.map  classgraphsat_1_1_clock_constraint_a561831532370518c82b43f6e8a3a5c9e_icgraph.md5  classgraphsat_1_1_clock_constraint_a81ba549abd62032b7491ff03190d31e0_cgraph.md5  classgraphsat_1_1_clock_constraint_aa4beb1eb7911ff6c503e4008ae3718ab_cgraph.map  classgraphsat_1_1_clock_constraint_aa4beb1eb7911ff6c503e4008ae3718ab_cgraph.md5  classgraphsat_1_1_clock_constraint_acb93892181e50c6bbbe2a67faaf27242_cgraph.map  classgraphsat_1_1_clock_constraint_aec53310f32719248c8e8bbf011819b79_cgraph.md5  classgraphsat_1_1_compact_compose_state_set-members.html  classgraphsat_1_1_compact_compose_state_set.html  classgraphsat_1_1_compact_compose_state_set__coll__graph.map  classgraphsat_1_1_compact_compose_state_set__coll__graph.md5  classgraphsat_1_1_compact_compose_state_set__inherit__graph.map  classgraphsat_1_1_compact_compose_state_set__inherit__graph.md5  classgraphsat_1_1_compact_compose_state_set_a0a42f9a9d01b52368209db0e1c5e67b7_icgraph.map  classgraphsat_1_1_compact_compose_state_set_a0a42f9a9d01b52368209db0e1c5e67b7_icgraph.md5  classgraphsat_1_1_complete_compact_compose_state_set-members.html  (+2294 more)
ftma/example/: 2doors.xml  fischer.xml  sample.xml
ftma/include/: action.hpp  channel.h  counter.hpp  counteraction.h  dbm.hpp  dbmset.h  dbmset.hpp  dbmutil.hpp  discretestate.hpp  edge.hpp  example.h  fastHash.h  gettime.h  linsimpcons.hpp  location.hpp  parallel.h  parameter.h  reachability.hpp  reachableset.hpp  reachset.hpp  state.hpp  statemanager.hpp  ta.hpp  tma.hpp  transition.hpp  uppaalscan.h
ftma/parser/: uppaalparser.y  uppaalscan.l
ftma/src/: argment.cpp  channel.cpp  clock.cpp  clockdiffcons.cpp  countercons.cpp  datacompression.cpp  dbm.cpp  dbmutil.cpp  dbmutil.od  dbmutil.or  example.cpp  fashHash.cpp  fashHash.od  fashHash.or  fischer.cpp  fischer_projector.cpp  fisher.cpp  fisher_projector.cpp  function.cpp  instancefactory.cpp  instancefactory.od  liftcustomer.cpp  location.cpp  logset.cpp  main.cpp  main.od  main.or  parallel.cpp  pmcp.cpp  runxml.cpp  stateout.cpp  strutil.cpp  symmetry.cpp  ta_next_step.cpp  ta_statemanager.cpp  train_gate.cpp  train_gate_projector.cpp  transition.cpp  uppaaldata.cpp  uppaalmodelparser.cpp  (+11 more)
ftma/test/: fisher  runtest.sh  statetest
(+1395 files in other folders)
